--- a/layout.css
+++ b/layout.css
@@ -4,10 +4,24 @@
 .h-full {
   height: 100%;
 }
-
 .vw-full {
   width: 100vw;
 }
 .vh-full {
   height: 100vh;
+}
+.m-0 {
+  margin: 0px !important;
+}
+.p-0 {
+  padding: 0px !important;
+}
+.oh {
+  overflow: hide !important;
+}
+.flex {
+  display: flex !important;
+}
+.block {
+  display: block !important;
 }
