--- a/coamplifi-style.css
+++ b/coamplifi-style.css
@@ -2,6 +2,10 @@
   background-color: #e5d3a9 !important;
 }
 
+.bg-white {
+  background-color: white !important;
+}
+
 .center-container {
   width: 1000px;
   height: 700px;
